# simple-2d-engine

./: .clang-format  .gitignore  .gitmodules  README.md  getting-started.md
engine/core/: AnimatedSprite.cpp  AnimatedSprite.hpp  CharacterSprite.cpp  CharacterSprite.hpp  ColoredSprite.cpp  ColoredSprite.hpp  Sprite.cpp  Sprite.hpp  SpriteFactory.cpp  SpriteFactory.hpp  StructuralSprite.hpp  TextSprite.cpp  TextSprite.hpp  TexturedSprite.cpp  TexturedSprite.hpp  TileMapMetaTileFactory.hpp  TileMapSprite.cpp  TileMapSprite.hpp  Vector2.cpp  Vector2.h
engine/data/: AnimatedSpriteData.cpp  AnimatedSpriteData.hpp  AnimationData.cpp  AnimationData.hpp  AnimationStateData.cpp  AnimationStateData.hpp  DataCache.cpp  DataCache.hpp  DataCacheManager.cpp  DataCacheManager.hpp  JSONTypes.h  SpriteData.cpp  SpriteData.hpp  SpritesheetData.cpp  SpritesheetData.hpp  TileMapData.cpp  TileMapData.hpp
engine/disk/: ResourceProvider.hpp
engine/event/: Event.hpp  EventListener.hpp
engine/graphics/: GraphicsManager.hpp  Shader.hpp
engine/input/: InputKey.hpp  InputListener.hpp  InputManager.hpp
engine/platform/: DrawCall.h  GraphicsManager.hpp  PlatformManager.h  ResourceProvider.hpp  SoundManager.hpp
engine/platform/impl/: MuteSoundManager.hpp
engine/sound/: SoundManager.hpp
engine/sound/impl/: MuteSoundManager.hpp
engine/utils/: FileUtils.h  FileUtils.mm  Logging.h  MathUtils.h  PerlinNoise.h  StringUtils.h
engine/view/: Game.cpp  Game.hpp  View.h  ViewManager.cpp  ViewManager.hpp
opengl-backend/: OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLHeaders.h  OpenGLPlatformManager.cpp  OpenGLPlatformManager.hpp  OpenGLResourceManager.cpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLSpriteRenderer.cpp  OpenGLSpriteRenderer.hpp  OpenGLTexture2d.cpp  OpenGLUtils.h  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture2D.cpp  Texture2D.hpp
projects/SampleGame/app/: build.gradle
projects/SampleGame/app/src/androidTest/java/com/jonataschagas/samplegame/: ExampleInstrumentedTest.java
projects/SampleGame/app/src/main/: AndroidManifest.xml
projects/SampleGame/app/src/main/cpp/: AndroidResourceProvider.cpp  AndroidResourceProvider.h  CMakeLists.txt  Renderer.cpp  Renderer.h  Utility.cpp
projects/SampleGame/app/src/main/java/com/jonataschagas/samplegame/: MainActivity.java
projects/SampleGame/app/src/test/java/com/jonataschagas/samplegame/: ExampleUnitTest.java
projects/SampleGame/gradle/wrapper/: gradle-wrapper.properties
projects/assets/characters/: virtual-guy.json  virtual-guy_animation.json
projects/assets/levels/: falling-blocks.json  green-zone1.json  green-zone2.json  level1.json  level1.tiled-session  level2.json  level3.json  level4.json  levels.json  menu.json  meta-tileset.tsj  rock-head.json  tileset.tsj
projects/assets/shaders/: sprite.frag
projects/assets/shaders/android/: circle.frag  circle.vs  color.frag  color.vs  sprite.frag  sprite.vs
projects/assets/shaders/osx/: circle.frag  circle.vs  color.frag  color.vs  sprite.vs
projects/osx-opengl-backend/: CMakeLists.txt  Earth.cpp  Earth.hpp  OSXResourceProvider.cpp  OSXResourceProvider.hpp  OpenGLRenderer.cpp  OpenGLRenderer.h  main.cpp
projects/osx-opengl-backend/CMAKE/: FindBox2d.cmake  FindGLFW3.cmake
projects/osx-sdl-backend/: CMakeLists.txt  SDLGame.cpp  SDLGame.hpp  main.cpp
projects/osx-sdl-backend/CMAKE/: FindFreetype.cmake  FindGLM.cmake
projects/sample-game/: Head.cpp  Head.hpp  SampleGame.cpp  SampleGame.hpp
projects/sample-game/objects/: Rocket.cpp  Rocket.hpp  RotatingPlanet.cpp  RotatingPlanet.hpp  Star.cpp  Star.hpp  StarCluster.cpp  StarCluster.hpp  StarField.cpp  StarField.hpp
projects/sample-game/objects/particles/: Particle.cpp  Particle.hpp  ParticlePool.cpp  ParticlePool.hpp
projects/sample-game/view/: GameView.cpp  GameView.hpp  Maze.hpp
sdl-backend/: LTexture.cpp  LTexture.hpp  LTimer.cpp  LTimer.hpp  SDLGame.cpp  SDLGame.hpp  SDLGraphicsManager.cpp  SDLGraphicsManager.hpp  SDLManager.cpp  SDLManager.hpp  SDLResourceProvider.cpp  SDLResourceProvider.hpp  SDLSoundManager.cpp  SDLSoundManager.hpp
service-implementation/disk/android/: AndroidResourceProvider.cpp  AndroidResourceProvider.h
service-implementation/disk/osx/: OSXResourceProvider.cpp  OSXResourceProvider.hpp
service-implementation/graphics/opengl/: OpenGLGraphicsManager.cpp  OpenGLGraphicsManager.hpp  OpenGLResourceManager.hpp  OpenGLShader.cpp  OpenGLSpriteRenderer.cpp  OpenGLTextManager.cpp  OpenGLTextManager.hpp  OpenGLTexture2d.cpp  OpenGLTexture2d.hpp  OpenGLUtils.h
service-implementation/input/android/: AndroidInputManager.cpp  AndroidInputManager.hpp
service-implementation/input/glfw/: GLFWInputManager.cpp  GLFWInputManager.hpp
service-implementation/sounds/android/: AndroidSoundManager.cpp  AndroidSoundManager.h  AndroidSoundManager.hpp
service-implementation/sounds/sdl/: SDLSoundManager.cpp  SDLSoundManager.hpp
